--- a/src/EntryValidator/EntryValidator.FormsPlugin.Abstractions/EntryValidator.FormsPlugin.Abstractions.csproj
+++ b/src/EntryValidator/EntryValidator.FormsPlugin.Abstractions/EntryValidator.FormsPlugin.Abstractions.csproj
@@ -38,13 +38,19 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Behaviors\EmailValidatorBehavior.cs" />
-    <Compile Include="Behaviors\MaxLengthValidator.cs" />
+    <Compile Include="Behaviors\MaxLengthValidatorBehavior.cs" />
+    <Compile Include="Behaviors\PasswordValidatorBehavior.cs" />
     <Compile Include="Converters\BooleanToSource.cs" />
+    <Compile Include="Converters\SecurityToStringConverter.cs" />
     <Compile Include="EmailValidator.xaml.cs">
       <DependentUpon>EmailValidator.xaml</DependentUpon>
     </Compile>
     <Compile Include="MaxLengthValidator.xaml.cs">
       <DependentUpon>MaxLengthValidator.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Enums\Security.cs" />
+    <Compile Include="PasswordValidator.xaml.cs">
+      <DependentUpon>PasswordValidator.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -78,6 +84,13 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="PasswordValidator.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.2.0.1.6505\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.2.0.1.6505\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
